--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="./assets/bird.jpg" alt="bird_profile_pic" height="220' width="220"></td>
+            <td><img src="bird.jpg" alt="bird_profile_pic" height="220' width="220"></td>
             <td><h1>Satyasmith Ray</h1>
                 <p><em>Systems Engineer at <strong>
                     <a href="https://www.infosys.com/" target="_blank">Infosys LTD.</a>
