--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h3, initial-scale=1.0">
     <title>Contact Details</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <h2>Contact Details</h2>
+    <hr>
     <ul>
         <li><strong>Contact No:</strong>+91 8984700660</li>
         <li><strong>Email ID:</strong>doodle.ng@gmail.com</li>
