--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Satyasmith Ray</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="assets/bird.jpg" alt="bird_profile_pic" height="220' width="220"></td>
+            <td><img src="./assets/cat.png" alt="bird_profile_pic" height="220' width="220"></td>
             <td><h1>Satyasmith Ray</h1>
                 <p><em>Systems Engineer at <strong>
                     <a href="https://www.infosys.com/" target="_blank">Infosys LTD.</a>
@@ -23,12 +24,11 @@
         <li>Primary and Secondary School, DPS RKL, 2016</li>
         <li>B.Tech, ITER BBSR, 2020</li>
     </ul>
-    <h2>Hobbies</h2>
-    <ol type="i">
-        <li>Coding</li>
-        <li>Video Games</li>
-        <li>Riding Bikes</li>
-    </ol>
+    <hr>
+    <h4>
+        <a href="hobbies.html" target="_blank">My Hobbies</a>
+        
+    </h4>
     <h2>Work Experience</h2>
     <table border="2">
         <thead>
